Fix layout issues

--- a/resources/css/comment.css
+++ b/resources/css/comment.css
@@ -7,11 +7,8 @@
   font-size: 1.1em;
 }
 
-.commentpayload {
-  padding: 8px 8px 16px;
-  vertical-align: top;
+.comment {
   word-break: break-word;
-  width: 100%;
 }
 
 .comment-submit-button {
@@ -22,18 +19,4 @@
 .comment-loading-indicator {
   display: none;
   padding: 6px;
-}
-
-@media only screen and (max-width: 1023px) {
-  .topiccommenttext {
-    max-width: 21em;
-    word-wrap: break-word;
-    font-size: small;
-  }
-
-  .commentpayload {
-    display: block;
-    max-width: 100%;
-    box-sizing: border-box;
-  }
 }
